tests/error/misc_errors/result_tag_not_static.py
from guppylang.std.builtins import result
from tests.util import compile_guppy


@compile_guppy
def foo(y: bool, x: int) -> None:
    result("foo" if y else "bar", x)
