tests/error/misc_errors/result_tag_not_static.err
Error: Expected a string literal (at $FILE:7:11)
  | 
5 | @compile_guppy
6 | def foo(y: bool, x: int) -> None:
7 |     result("foo" if y else "bar", x)
  |            ^^^^^^^^^^^^^^^^^^^^^ Expected a string literal

Guppy compilation failed due to 1 previous error
